<resources>
    <string name="app_name">Girl Name With Dua And Quran</string>
    <string name="girlPorbo1">  মেয়েদের নাম পর্ব ১</string>
    <string name="girlPorbo2">  মেয়েদের নাম পর্ব ২</string>
    <string name="girlPorbo3"> মেয়েদের নাম পর্ব ৩</string>
    <string name="girlPorbo4"> মেয়েদের নাম  পর্ব ৪</string>
    <string name="girlPorbo5">মেয়েদের নাম  পর্ব ৫</string>
    <string name="girlPorbo6"> মেয়েদের নাম পর্ব ৬</string>
    <string name="girlPorbo7"> মেয়েদের নাম পর্ব ৭</string>
    <string name="GSoreoDiyaName">আ মেয়েদের দিয়ে নাম </string>
    <string name="GNoDiyaName">ন মেয়েদের দিয়ে নাম</string>
    <string name="GFoDiyeName">ফ মেয়েদের দিয়ে নাম</string>
    <string name="GModiyaName">ম মেয়েদের দিয়ে নাম</string>
    <string name="GToDiyeName">ত মেয়েদের দিয়ে নাম </string>
    <string name="BacaiKoraMeyederName">বাছাই করা মেয়েদের নাম </string>
    <string name="RoDiyaName">র দিয়ে মেয়েদের নাম </string>
    <string name="SAnDShoDIyaName">শ, স দিয়ে মেয়েদের নাম </string>
    <string name="JDiyaName">জ দিয়ে মেয়েদের নাম </string>
    <string name="NamerPovab"> ভালো মন্দ নামের প্রভাব  </string>
    <string name="NameKoronerSomoy"> নামকরনের সময়</string>
    <string name="UttomName">ইসলামি ও উত্তম নাম </string>
    <string name="HaramName"> যেসব নাম রাখা হারাম  </string>
    <string name="MakruhName">যেসব নাম রাখা মাকরুহ   </string>
    <string name="SHirkiName">শিরকী নাম </string>
    <string name="AllahName"> আল্লাহর ৯৯ নাম ও অর্থ</string>
    <string name="NObiName">নবীদের নাম</string>
    <string name="SahbahderName">সাহাবাদের নাম </string>
    <string name="boyPorbo1">ছেলেদের নাম পর্ব ১  </string>
    <string name="boyPorbo2">ছেলেদের নাম পর্ব ২ </string>
    <string name="boyPorbo3">ছেলেদের নাম পর্ব ৩ </string>
    <string name="boyPorbo4">ছেলেদের  নাম পর্ব ৪</string>
    <string name="boyPorbo5">ছেলেদের নাম পর্ব ৫ </string>
    <string name="boyPorbo6">ছেলেদের নাম পর্ব ৬ </string>
    <string name="boyPorbo7">ছেলেদের নাম পর্ব ৭ </string>
    <string name="CSoreaDiyaName">  আ দিয়ে ছেলেদের নাম </string>
    <string name="CFodiyaName">  ফ দিয়ে ছেলেদের নাম </string>
    <string name="CMoDIyaName"> ম দিয়ে ছেলেদের নাম</string>
    <string name="CRodiyaName"> র দিয়ে ছেলেদের নাম</string>
    <string name="TitelGirlnNamePorbo">মেয়েদের নাম পর্ব</string>
    <string name="TitelBoyPorbo">ছেলেদের নাম পর্ব</string>
    <string name="TitelGirlBorno">বর্ণ অনুযায়ী মেয়েদের নাম</string>
    <string name="TitelBoyBorno">বর্ণ অনুযায়ী ছেলেদের নাম</string>
    <string name="TitelNameDetails">নামের\n বিস্তারিত</string>
    <string name="TitelNameDetails2">নামের বিস্তারিত</string>
    <string name="TitelAllah99Name">আল্লাহর ৯৯ নাম ও অর্থ</string>
    <string name="porvo1text">

আফরা = অর্থ = সাদা

\n\n সাইয়ারা = অর্থ = তারকা

\n\n আফিয়া =অর্থ = পুণ্যবতী

\n\n  মাহমুদা = অর্থ = প্রশংসিতা

\n\n         রায়হানা = অর্থ = সুগন্ধি ফুল

\n\n  রাশীদা = অর্থ = বিদুষী

\n\n                             রামিসা = অর্থ = নিরাপদ
\n\n                                                      রাইসা =অর্থ = রাণী

\n\n                                           রাফিয়া = অর্থ = উন্নত

\n\n                             নুসরাত = অর্থ = সাহায্য

\n\n                        নাঈমাহ = অর্থ = সুখি জীবন যাপনকারীনী
\n\n                            নাফীসা = অর্থ = মূল্যবান

\n\n                                                               মাসূমা = অর্থ = নিষ্পাপ


\n\n হাবীবা = অর্থ = প্রিয়া

\n\n ফারিহা = অর্থ = সুখি

\n\n দীবা = অর্থ = সোনালী

\n\n বিলকিস = অর্থ = রাণী

\n\n আনিকা =অর্থ = রুপসী

\n\n তাবিয়া =অর্থ =অনুগত

\n\n তাবাসসুম =অর্থ = মুসকি হাসি

\n\n তাসনিয়া = অর্থ = প্রশংসিত

\n\n তাহসীনা = অর্থ = উত্তম
\n\n তাহিয়্যাহ = অর্থ = শুভেচ্ছা
\n\n তোহফা = অর্থ = উপহার

\n\n তাখমীনা = অর্থ = অনুমান

\n\n তাযকিয়া = অর্থ = পবিত্রতা

\n\n তাসলিমা = অর্থ = সর্ম্পণ

\n\n তাসমিয়া =অর্থ = নামকরণ

\n\n তাসনীম = অর্থ = বেহেশতের ঝর্ণা

\n\n তাসফিয়া =অর্থ = পবিত্রতা

\n\n তাসকীনা =অর্থ = সান্ত্বনা

\n\n তাসমীম =অর্থ = দৃঢ়তা

\n\n তাশবীহ =অর্থ = উপমা

\n\n তাকিয়া শুদ্ধ চরিত্র

\n\n তাকমিলা =অর্থ = পরিপূর্ণ

\n\n তামান্না = অর্থ = ইচ্ছা

\n\n তামজীদা = অর্থ = মহিমা কীর্তন

\n\n তাহযীব = অর্থ = সভ্যতা

\n\n তাওবা = অর্থ = অনুতাপ

\n\n তানজীম = অর্থ = সুবিন্যস্ত
\n\n তাহিরা = অর্থ = পবিত্র

\n\n তবিয়া = অর্থ = প্রকৃতি

\n\n তরিকা = অর্থ = রিতি-নীতি

\n\n তাইয়্যিবা = অর্থ = পবিত্র

\n\n তহুরা = অর্থ = পবিত্রা

\n\n তুরফা = অর্থ = বিরল বস্তু

\n\n তাহামিনা = অর্থ = মূল্যবান

\n\n তাহমিনা = অর্থ = বিরত থাকা

\n\n তানমীর ক্রোধ প্রকাশ করা

\n\n ফরিদা =অর্থ = অনুপম

\n\n ফাতেহা =অর্থ = আরম্ভ

\n\n ফাজেলা =অর্থ = বিদুষী

\n\n ফাতেমা =অর্থ = নিষ্পাপ

\n\n ফারাহ =অর্থ = আনন্দ

\n\n ফারহানা =অর্থ = আনন্দিতা

\n\n ফারহাত =অর্থ = আনন্দ

\n\n ফেরদাউস বেহেশতের নাম

\n\n ফসিহা =অর্থ = চারুবাক

\n\n ফাওযীয়া =অর্থ = বিজয়িনী

\n\n ফারজানা =অর্থ = জ্ঞানী


\n\n ফিরোজা =অর্থ = মূল্যবান পাথর

\n\n ফজিলাতুন =অর্থ = অনুগ্রহ কারিনী

\n\n ফাহমীদা =অর্থ = বুদ্ধিমতী

\n\n ফাবিহা বুশরা =অর্থ = অত্যন্ত ভাল শুভ নিদর্শন

\n\n মোবাশশিরা =অর্থ =সুসংবাদ বাহী

\n\n মাজেদা =অর্থ = সম্মানিয়া

\n\n মাদেহা =অর্থ = প্রশংসা

\n\n মারিয়া =অর্থ = শুভ্র

\n\n মাবশূ রাহ =অর্থ = অত্যাধিক সম্পদ শালীনী

\n\n মুতাহাররিফাত =অর্থ = অনাগ্রহী
\n\n মুতাহাসসিনাহ =অর্থ = উন্নত

\n\n মুতাদায়্যিনাত =অর্থ = বিশ্বস্ত ধার্মিক মহিলা

\n\n মাহবুবা =অর্থ = প্রেমিকা

    </string>
    <string name="porvo2text">

মুহতারামাত =অর্থ = সম্মানিতা

\n\n মুহসিনাত =অর্থ = অনুগ্রহ কারিনী

\n\n মাহতরাত =অর্থ = সম্মিলিত
\n\n মাফরুশাত =অর্থ = কার্ণিকার

\n\n মাহাসানাত =অর্থ = সতী-সাধবী

\n\n মাহজুজা =অর্থ = ভাগ্যবতী

\n\n মারজানা =অর্থ = মুক্তা

\n\n আমিনা =অর্থ = নিরাপদ

\n\n আনিসা =অর্থ =কুমারী

\n\n আদীবা =অর্থ =মহিলা সাহিত্যিক

\n\n আনিফা =অর্থ =রুপসী

\n\n আতিয় =অর্থ =আগমনকারিণী

\n\n আছীর =অর্থ =পছন্দনীয়

\n\n আহলাম =অর্থ = স্বপ্ন
\n\n আরজা =অর্থ =এক

\n\n আরজু =অর্থ = আকাঙ্ক্ষা

\n\n আরমানী =অর্থ =আশাবাদী

\n\n আরীকাহ =অর্থ =কেদারা

\n\n আসমাহ =অর্থ = =সত্যবাদীনী

\n\n  আসীলা =অর্থ = =চিকন

\n\n আসিফা =অর্থ = =শক্তিশালী

\n\n  আসিলা =অর্থ = =নিখুঁত

\n\n আদওয়া =অর্থ = =আলো

\n\n আতিকা =অর্থ = =সুন্দরি

\n\n আফনান =অর্থ = =গাছের শাখা-প্রশাখা

\n\n আসিয়া =অর্থ = শান্তি স্থাপনকারী

\n\n মাছুরা =অর্থ = নল

\n\n মাহেরা =অর্থ = নিপুনা

\n\n মোবারাকা =অর্থ = কল্যাণীয়
\n\n মুবতাহিজাহ =অর্থ = উৎফুল্লতা

\n\n মাবশূ রাহ =অর্থ = অত্যাধিক সম্পদ শালীনী

\n\n মুবীনা =অর্থ = সুষ্পষ্ট

\n\n মুতাহাররিফাত =অর্থ = অনাগ্রহী

\n\n মুতাহাসসিনাহ =অর্থ = উন্নত

\n\n মুতাদায়্যিনাত =অর্থ = বিশ্বস্ত ধার্মিক মহিলা

\n\n মুতাকাদ্দিমা =অর্থ = উন্নতা

\n\n মুজিবা =অর্থ = গ্রহণ কারিনী

\n\n মাজীদা =অর্থ = গোরব ময়ী

\n\n মহাসেন =অর্থ = সৌন্দর্য

\n\n মুহতারিযাহ =অর্থ = সাবধানতা অবলম্বন কারিনী

\n\n মুহতারামাত =অর্থ = সম্মানিতা

\n\n মুহসিনাত =অর্থ = অনুগ্রহ

\n\n শান্তা =অর্থ = শান্ত

\n\n তানিয়া =অর্থ = রাজকণ্যা

\n\n  শামীমা =অর্থ = সুগন্ধি

\n\n  তাহিয়া =অর্থ = সম্মানকারী

\n\n ইসরাত =অর্থ = সাহায্য

\n\n জুঁই একটি ফুলের নাম

\n\n নাজমা =অর্থ = দামী

\n\n সায়মা =অর্থ = রোজাদার


\n\n জাকিয়া =অর্থ = পবিত্র

\n\n হামিদা =অর্থ = প্রশংসিত

\n\n নাদিয়া =অর্থ = আহবান

\n\n মুনতাহা =অর্থ = পরিক্ষিত

\n\n লতিফা =অর্থ = ঠাট্টা

\n\n রিমা =অর্থ = সাদা হরিণ

\n\n পাপিয়া =অর্থ = সুকণ্ঠি নারী

\n\n নাসরিন =অর্থ = সাহায্যকারী

\n\n মনিরা =অর্থ = জ্ঞানী

\n\n আফসানা =অর্থ = উপকথা

\n\n জারা =অর্থ = গোলাম

\n\n ফারিয়া =অর্থ = আনন্দ

\n\n ইরতিজা =অর্থ = অনুমতি

\n\n সুলতানা =অর্থ = মহারানী

\n\n নাদিরা =অর্থ = বিরল

\n\n হালিমা =অর্থ = দয়ালু

\n\n শিরিন =অর্থ = সুন্দরী

\n\n আক্তার =অর্থ = ভাগ্যবান

\n\n সামিয়া =অর্থ = রোজাদার

\n\n শাহিনুর =অর্থ = চাঁদের আলো

\n\n ইয়াসমিন =অর্থ = ফুলের নাম

\n\n হাবিবা =অর্থ = প্রেমিকা

\n\n রোমানা =অর্থ = ডালিম

    </string>
    <string name="porvo3text">

 শাকিলা =অর্থ = সুন্দরী

\n\n পারভেজ =অর্থ = বিজয়



\n\n আয়েশা =অর্থ = সমৃদ্ধিশালী

\n\n নাহিদা =অর্থ = উন্নত

\n\n  মাহিয়া =অর্থ = নিবারণকারীনি

\n\n সানজিদা =অর্থ = বিবেচক
\n\n জেসমিন =অর্থ = ফুলের নাম
\n\n নূসরাত =অর্থ = সাহায্য
\n\n  নাজীফা =অর্থ = পবিত্র

\n\n নাইমাহ =অর্থ = সুখি জীবনযাপনকারীনী
\n\n নাফিসা =অর্থ = মূল্যবান

\n\n মুরশীদা =অর্থ = পথর্শিকা

\n\n মাসূদা =অর্থ = সৌভাগ্যবতী

\n\n আসিয়া =অর্থ = শান্তি স্থাপনকারী

\n\n আশরাফী =অর্থ = সম্মানিত

\n\n  আনিসা =অর্থ = কুমারী

\n\n আনিফা =অর্থ = রূপসী

\n\n আনওয়ার =অর্থ = জ্যোতিকাল

\n\n  আরিফা =অর্থ = প্রবল বাতাস

\n\n আয়িশা =অর্থ = জীবন যাপন কারিণয়

\n\n আমীনা =অর্থ = আমানত রক্ষাকারণী

\n\n আফরোজা =অর্থ = জ্ঞানী
\n\n আয়মান =অর্থ = শুভ।

\n\n আকলিমা =অর্থ = দেশ

\n\n ইসমাত আফিয়া =অর্থ = পূর্ণবতী

\n\n কামরুন =অর্থ = ভাগ্য

\n\n  রীমা =অর্থ = সাদা হরিণ

\n\n সায়িমা =অর্থ = রোজাদার

\n\n শাহানা =অর্থ = রাজকুমারী

\n\n শাফিয়া =অর্থ = মধ্যস্থতাকারিনী

\n\n সাজেদা =অর্থ = ধার্মিক

\n\n সাদীয়া =অর্থ = সৌভাগ্যবর্তী

\n\n সালমা =অর্থ = প্রশন্ত

\n\n তাসনিম =অর্থ = বেহশতী ঝর্ণা

\n\n হুমায়রা =অর্থ = রূপসী

\n\n লাবীবা =অর্থ = জ্ঞানী

\n\n  ফাহমিদা =অর্থ = বুদ্ধিমতী

\n\n নার্গিস =অর্থ = ফুলের নাম

\n\n আফিফা =অর্থ = সাধ্বী

\n\n  সাদিয়া =অর্থ = সৌভাগ্যবতী

\n\n জাবিরা=অর্থ =রাজিহওয়া

\n\n জাদিদাহ=অর্থ =নতুন

\n\n জাদওয়াহ=অর্থ =উপহার

\n\n জাহান=অর্থ =পৃথিবী
\n\n জালসান=অর্থ =বাগান
\n\n জমিমা=অর্থ =ভাগ্য।

\n\n আমিনা=অর্থ = বিশ্বাসী

\n\n আনজুম=অর্থ = তারা

\n\n আকিলা=অর্থ = বুদ্ধিমতি

\n\n সাইদা=অর্থ =নদী

\n\n সালীমা=অর্থ =সুস্থ

\n\n সালমা আফিয়া=অর্থ = প্রশান্ত পূণ্যবতী

\n\n সালমা আনিকা =অর্থ =প্রশান্ত সুন্দরী

\n\n সালমা আনজুম =অর্থ = প্রশান্ত তারা

\n\n সালমা ফারিহা =অর্থ = প্রশান্ত সুখী

\n\n সালমা ফাওজিয়া =অর্থ = প্রশান্ত সফল

\n\n সালমা মাহফুজা=অর্থ = প্রশান্ত নিরাপদ

\n\n ফারযানা =অর্থ = কৌশলী

\n\n দিলরুবা =অর্থ = প্রিয়তমা

\n\n নওশীন =অর্থ = মিষ্টি</string>
    <string name="boyenglishname1">ছেলেদের বাংলা - ইংলিশ নাম পর্ব ১  </string>
    <string name="boyenglishname2">ছেলেদের বাংলা - ইংলিশ নাম পর্ব ১  </string>
    <string name="boyenglishname3">ছেলেদের বাংলা - ইংলিশ নাম পর্ব ৩ </string>
    <string name="boyenglish">ছেলেদের বাংলা - ইংলিশ নাম</string>
    <string name="Admob_banner">ca-app-pub-9554301549099628/8613228822</string>
</resources>